--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "color": "^0.10.1",
     "history": "^1.17.0",
     "immutable": "^3.7.6",
+    "jupyter-paths": "^0.3.5",
     "normalize.css": "^3.0.3",
     "react": "^0.14.5",
     "react-code-mirror": "^3.0.6",
