Provide the LAUNCH_KERNEL action.

--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "codemirror": "^5.10.0",
     "color": "^0.10.1",
     "commutable": "^0.1.2",
+    "enchannel-zmq-backend": "^0.4.0",
     "history": "^1.17.0",
+    "ijavascript": "^5.0.8",
     "immutable": "^3.7.6",
     "normalize.css": "^3.0.3",
     "react": "^0.14.5",
@@ -46,7 +48,9 @@
     "rx": "^4.0.7",
     "source-code-pro": "git://github.com/adobe-fonts/source-code-pro.git#release",
     "source-sans-pro": "git://github.com/adobe-fonts/source-sans-pro.git#release",
-    "transformime-react": "0.3.0"
+    "spawnteract": "0.0.4",
+    "transformime-react": "0.3.0",
+    "uuid": "^2.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
