--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
     ],
     "plugins": [
       "transform-class-properties",
-      "transform-export-extensions"
+      "transform-export-extensions",
+      "tranform-object-rest-spread"
     ]
   }
