--- a/package.json
+++ b/package.json
@@ -44,9 +44,14 @@
     "react-dnd": "^2.1.2",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^0.14.7",
+    "react-immutable-proptypes": "^1.7.0",
     "react-jupyter-display-area": "0.1.0",
     "react-markdown": "^1.2.4",
+    "react-redux": "^4.4.0",
     "react-router": "^1.0.3",
+    "redux": "^3.3.1",
+    "redux-immutablejs": "0.0.8",
+    "redux-saga": "^0.9.3",
     "source-code-pro": "git://github.com/adobe-fonts/source-code-pro.git#release",
     "source-sans-pro": "git://github.com/adobe-fonts/source-sans-pro.git#release",
     "spawnteract": "^1.0.2",
