--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "eslint-plugin-babel": "^3.0.0",
     "eslint-plugin-react": "^3.11.3",
     "react-addons-test-utils": "^0.14.5",
+    "redux-logger": "^2.6.1",
     "sinon": "^1.17.3",
     "watch": "^0.17.1"
   }
