Add support for jupyter-js-widgets
Today's work

Cleanup state change observable

Add redux store -> widget model state sync

Add redux update -> backbone model

Almost get backend to frontend working...

Finish getting redux -> backend working!!!

Cell-msg associations

Pad the widget area

Version validation

Add support for backend -> frontend custom msgs

Kludge: clear widgets on cell execution

Add support for frontend to backend custom msgs

Associate widget spawned messages with the view's cell

Fix widget construction and instant deletion bug

Add widget themes (excluding slider)

Rebase fixes

Fix execution test

Add sanity tests

Install widgets on travis

Up the timeout

Get slider working

Associate state update messages with correct cell.

Refactor RXJS logic

Aesthetically improve model-update.js

Fix typos

Adapt test for version validation observable

Fix refactor bugs

Make components pure for massive perf boost

Make the redux -> widgets logic a little bit smarter

Test one widget for now

Move widget state into subkey

Fix rebase problems

Address Kyle's comments

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "github": "^2.5.2",
     "home-dir": "^1.0.0",
     "immutable": "^3.7.6",
+    "jupyter-js-widgets": "^1.1.1",
     "kernelspecs": "^1.0.1",
     "mathjax-electron": "^1.0.0",
     "normalize.css": "^4.2.0",
