--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "immutable": "^3.7.6",
     "jupyter-js-widgets": "^1.1.1",
     "kernelspecs": "^1.0.1",
+    "lodash.difference": "^4.4.0",
     "mathjax-electron": "^1.0.0",
     "normalize.css": "^4.2.0",
     "nteract-assets": "^2.0.0",
