--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "home-dir": "^1.0.0",
     "immutable": "^3.7.6",
     "kernelspecs": "^1.0.1",
+    "material-ui": "^0.15.4",
     "mathjax-electron": "^1.0.0",
     "normalize.css": "^4.2.0",
     "nteract-assets": "^2.0.0",
@@ -77,8 +78,12 @@
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.3.1",
     "react-jupyter-display-area": "^1.2.3",
+    "react-jupyter-display-area": "^1.0.0",
+    "react-menu": "0.0.10",
     "react-notification-system": "^0.2.9",
     "react-redux": "^4.4.5",
+    "react-simple-dropdown": "^1.1.4",
+    "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
     "redux-actions": "^0.11.0",
     "redux-logger": "^2.6.1",
