--- a/package.json
+++ b/package.json
@@ -67,7 +67,6 @@
     "home-dir": "^1.0.0",
     "immutable": "^3.7.6",
     "kernelspecs": "^1.0.1",
-    "leaflet": "^0.7.7",
     "mathjax-electron": "^1.1.0",
     "normalize.css": "^4.2.0",
     "nteract-assets": "^2.0.0",
@@ -80,6 +79,7 @@
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.3.1",
     "react-jupyter-display-area": "^1.3.1",
+    "react-mapbox-gl": "^0.11.0",
     "react-notification-system": "^0.2.9",
     "react-redux": "^4.4.5",
     "react-simple-dropdown": "^1.1.4",
