--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "immutable": "^3.7.6",
     "kernelspecs": "^1.0.1",
     "leaflet": "^0.7.7",
+    "lodash": "^4.16.2",
     "mathjax-electron": "^1.1.1",
     "moment": "^2.15.0",
     "normalize.css": "^4.2.0",
