--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "redux-observable": "^0.12.0",
     "rxjs": "^5.0.0-beta.12",
     "shell-env": "^0.2.0",
+    "spawn-rx": "^2.0.1",
     "spawnteract": "^2.2.0",
     "uuid": "^2.0.3",
     "yargs": "^6.0.0"
