--- a/package.json
+++ b/package.json
@@ -95,7 +95,9 @@
     "mocha": "^3.0.2",
     "mock-require": "^1.3.0",
     "nyc": "^8.3.0",
+    "react": "^15.3.2",
     "react-addons-test-utils": "^15.3.2",
+    "react-dnd": "^2.1.4",
     "react-dnd-test-backend": "^1.0.2",
     "rimraf": "^2.5.2",
     "sinon": "^1.17.6",
