--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "license": "BSD-3-Clause",
   "scripts": {
-    "postinstall": "node scripts/check-deps.js && install-app-deps",
+    "postinstall": "node scripts/check-deps.js && install-app-deps && npm run build",
     "reinstall": "npm run clean && rimraf node_modules app/node_modules/ && npm install",
     "prestart": "npm run build",
     "start": "cross-env NODE_ENV=development ./node_modules/electron/cli.js ./app/",
