--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "redux-actions": "^0.13.0",
     "redux-logger": "^2.7.4",
     "redux-observable": "^0.12.0",
+    "reon-core": "0.0.1",
     "rxjs": "^5.0.0-rc.1",
     "shell-env": "^0.2.0",
     "source-map-support": "^0.4.5",
