--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "flow-bin": "^0.35.0",
     "jsdom": "^9.8.3",
     "json-loader": "^0.5.4",
+    "jsonschema": "^1.1.0",
     "jsx-chai": "^4.0.0",
     "mkdirp": "^0.5.1",
     "mocha": "^3.0.2",
