--- a/package.json
+++ b/package.json
@@ -132,7 +132,7 @@
     "spawn-rx": "^2.0.3",
     "spawnteract": "^2.2.0",
     "uuid": "^3.0.0",
-    "vega": "^2.6.3",
+    "vega": "^3.0.0-beta.10",
     "vega-embed": "^2.2.0",
     "vega-lite": "^1.3.1",
     "yargs": "^6.4.0"
