--- a/packages/commutable/package.json
+++ b/packages/commutable/package.json
@@ -18,6 +18,7 @@
   "author": "Kyle Kelley <rgbkrk@gmail.com>",
   "license": "BSD-3-Clause",
   "dependencies": {
-    "immutable": "^3.8.1"
+    "immutable": "^3.8.1",
+    "uuid": "^3.0.1"
   }
 }
