--- a/packages/commutable/package.json
+++ b/packages/commutable/package.json
@@ -15,6 +15,9 @@
     "nteract",
     "notebooks"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "author": "Kyle Kelley <rgbkrk@gmail.com>",
   "license": "BSD-3-Clause",
   "dependencies": {
