--- a/packages/commutable/package.json
+++ b/packages/commutable/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nteract/lerna-commutable-trial",
+  "name": "@nteract/commutable",
   "version": "1.0.0",
   "description": "Testing out how to use lerna in a complex Electron app",
   "main": "index.js",
