--- a/package.json
+++ b/package.json
@@ -174,6 +174,7 @@
     "babel-loader": "^6.2.8",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-plugin-transform-flow-comments": "^6.22.0",
     "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.20.2",
     "babel-preset-es2015-node6": "^0.4.0",
