--- a/package.json
+++ b/package.json
@@ -203,6 +203,7 @@
     "mock-require": "^2.0.0",
     "nbschema": "0.0.2",
     "nyc": "^10.0.0",
+    "prettier": "^0.16.0",
     "react-addons-test-utils": "^15.4.0",
     "react-dnd-test-backend": "^1.0.2",
     "rimraf": "^2.5.2",
