--- a/packages/transforms-full/package.json
+++ b/packages/transforms-full/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nteract/transforms-full",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Transforms from nteract",
   "main": "index.js",
   "scripts": {
@@ -28,10 +28,10 @@
     "react": "^15.4.2"
   },
   "dependencies": {
-    "@nteract/transform-geojson": "1.0.0",
-    "@nteract/transform-model-debug": "1.0.0",
-    "@nteract/transform-plotly": "1.0.0",
-    "@nteract/transform-vega": "1.0.0",
-    "@nteract/transforms":  "1.0.0"
+    "@nteract/transform-geojson": "^1.0.1",
+    "@nteract/transform-model-debug": "^1.0.1",
+    "@nteract/transform-plotly": "^1.0.1",
+    "@nteract/transform-vega": "^1.0.1",
+    "@nteract/transforms": "^1.0.1"
   }
 }
