--- a/packages/commutable/package.json
+++ b/packages/commutable/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nteract/commutable",
   "version": "1.0.1",
-  "description": "Testing out how to use lerna in a complex Electron app",
+  "description": "library for immutable notebook operations",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
