--- a/packages/transform-model-debug/package.json
+++ b/packages/transform-model-debug/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "react": "^15.4.2"
   },
