--- a/packages/transforms-full/package.json
+++ b/packages/transforms-full/package.json
@@ -21,6 +21,9 @@
     "url": "https://github.com/nteract/nteract/issues"
   },
   "homepage": "https://github.com/nteract/nteract#readme",
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "react": "^15.4.2"
   },
