--- a/packages/commutable/package.json
+++ b/packages/commutable/package.json
@@ -15,6 +15,18 @@
     "type": "git",
     "url": "https://github.com/nteract/nteract/tree/master/packages/commutable"
   },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react"
+    ],
+    "plugins": [
+      "lodash",
+      "transform-class-properties",
+      "transform-flow-strip-types",
+      "transform-object-rest-spread"
+    ]
+  },
   "keywords": [
     "commutable",
     "nteract",
