--- a/packages/transform-model-debug/package.json
+++ b/packages/transform-model-debug/package.json
@@ -15,6 +15,18 @@
   "publishConfig": {
     "access": "public"
   },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react"
+    ],
+    "plugins": [
+      "lodash",
+      "transform-class-properties",
+      "transform-flow-strip-types",
+      "transform-object-rest-spread"
+    ]
+  },
   "peerDependencies": {
     "react": "^15.4.2"
   },
