--- a/packages/transform-vega/package.json
+++ b/packages/transform-vega/package.json
@@ -15,6 +15,18 @@
   "publishConfig": {
     "access": "public"
   },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react"
+    ],
+    "plugins": [
+      "lodash",
+      "transform-class-properties",
+      "transform-flow-strip-types",
+      "transform-object-rest-spread"
+    ]
+  },
   "dependencies": {
     "vega": "^2.6.3",
     "vega-embed": "^2.2.0",
