--- a/packages/transforms/package.json
+++ b/packages/transforms/package.json
@@ -30,11 +30,12 @@
     "access": "public"
   },
   "dependencies": {
-    "react-json-tree": "^0.10.1",
     "ansi-to-react": "^1.1.1",
-    "mathjax-electron": "^1.2.0",
     "commonmark": "^0.27.0",
-    "commonmark-react-renderer": "^4.3.1"
+    "commonmark-react-renderer": "^4.3.1",
+    "mathjax-electron": "^1.2.0",
+    "react-json-tree": "^0.10.1",
+    "react-test-renderer": "^15.4.2"
   },
   "peerDependencies": {
     "immutable": "^3.8.1",
