--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 sudo: false
 language: node_js
 node_js:
-- '6'
+# Current Long Term Stable (LTS) release
+- "6"
+# Pending LTS
+- "8"
 env:
   matrix:
   - GROUP=coverage
@@ -12,16 +15,12 @@ env:
 
 cache:
   apt: true
-  yarn: true
-  directories:
-    - node_modules
 
-before_install: yarn global add greenkeeper-lockfile@1
+before_install: npm install -g greenkeeper-lockfile@1
 before_script:
 - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
 - greenkeeper-lockfile-update
-script: travis_retry yarn run test:$GROUP
+script: travis_retry npm run test:$GROUP
 after_script: greenkeeper-lockfile-upload
 after_success:
   - 'if [[ $GROUP == coverage* ]]; then bash <(curl -s https://codecov.io/bash); fi'
-  - 'if [[ $GROUP == coverage* ]]; then bash scripts/yarn.sh; fi'
