--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,7 @@
 {
-  "lerna": "2.0.0-rc.4",
+  "lerna": "2.0.0-rc.5",
   "packages": [
     "packages/*"
   ],
-  "version": "independent",
-  "npmClient": "yarn"
+  "version": "independent"
 }
