--- a/packages/transform-geojson/package.json
+++ b/packages/transform-geojson/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.4",
   "description": "GeoJSON Transform",
   "main": "lib/",
+  "nteractDesktop": "src/index.js",
   "scripts": {
     "prepare": "npm run build",
     "build": "npm run build:clean && npm run build:lib && npm run build:flow",
